# libnds-rs

./: Cargo.toml  GETTING_SETUP.md  LICENSE.MD  armv5te-nintendo-ds.json  readme.md  thumbv4t-nintendo-ds.json
.cargo/: config.toml
examples/: Cargo.toml
examples/fifo_example/: arm7.rs  arm9.rs  main.rs
libnds-rs/: Cargo.toml  build.rs
libnds-rs/examples/: hello_world.rs
libnds-sys/: Cargo.toml  bindgen-arm7.sh  bindgen-arm9.sh  bindgen.sh  build.rs  wrapper.h
libnds-sys/src/: arm7_bindings.c  arm7_bindings.rs  arm7_error.rs  arm7_registers.rs  arm9_bindings.c  arm9_bindings.rs  arm9_registers.rs  atomics.rs  background_registers.rs  lib.rs  video_registers.rs
libnds7-sys/: Cargo.toml  bindgen-arm7.sh  build.rs  wrapper.h
libnds7-sys/src/: arm7_bindings.c  arm7_bindings.rs  arm7_impl.rs  atomics.rs  lib.rs
libnds9-sys/: Cargo.toml  bindgen-arm9.sh  build.rs  wrapper.h
libnds9-sys/src/: arm9_bindings.rs  atomics.rs  lib.rs
nds-rs/: Cargo.toml
nds-rs/test/romfs/: garbage-data  test-file.txt  ファイル.txt
nds-sys/: Cargo.toml  build.rs
nds-sys/src/: bindings.rs  lib.rs
