[package]
name = "libnds-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "libnds_rs"
crate-type = ["rlib"]

[dependencies]
libnds-sys = {path="../libnds-sys"}
libc = {version = "0.2.121", default-features = true}

[build-dependencies]
toml = "0.7.2"

[features]
default = ["romfs", "big-stack"]
romfs = []
big-stack = []
