[package]
name = "libnds-sys"
version = "0.1.0"
edition = "2021"
authors = ["SeleDreams"]
links = "nds9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = {version = "0.2.121", default-features = false}

[features]
default-features = ["arm9"]
arm9 = []
arm7 = []